# missionos

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: form1_runtime_audit_thresholds.yaml  missionos_llm_response_planner_bounds.yaml
docs/agents/: README.md  agent-architecture.md  artifact-taxonomy.md  claim-semantics.md  cli-parity-release-gate.md  contracts.md  e2e-verification.md  legacy-codename-rename-plan.md  local-llm-backends.md  publication-rules.md
docs/concepts/: README.md  agent-roles.md  boundaries.md
docs/examples/: README.md  missionos-chat-obstacle-recovery.md  missionos-chat-tokyo-akihabara.md
examples/fixture_missions/: README.md
scripts/: __init__.py  audit_mission_designer_battery_threshold_behavior_delta.py  audit_mission_designer_obstacle_alternate_route_closed_loop.py  audit_mission_designer_obstacle_form3_reobservation.py  audit_mission_designer_obstacle_payload_behavior_delta.py  audit_mission_designer_obstacle_true_form3_closed_loop.py  audit_mission_designer_payload_form1_runtime_delta.py  audit_mission_designer_payload_recovery_action.py  audit_mission_designer_payload_supervisor_form3_closed_loop.py  audit_mission_designer_wind_drift_form3_closed_loop.py  audit_mission_designer_wind_drift_recovery_closed_loop.py  audit_mission_designer_wind_noise_floor.py  audit_mission_designer_wind_trajectory_delta.py  audit_mission_os_multi_condition_supervisor_runtime.py  bridge_runtime.sh  build_gateway_full_runtime_readiness.py  build_gateway_mission_session.py  build_gateway_owned_observation_stream.py  build_gateway_owned_recovery_decision_loop.py  build_gateway_supervisor_lifecycle.py  build_mission_os_supervisor_scope_cohort.py  build_operational_envelope_from_artifacts.py  build_wind_form3_operational_envelope_cohort.py  check_lesson_invariance_watchlist.py  consume_wind_form3_operational_envelope_for_physical_plan.py  curate_mission_replay_timeline.py  curate_px4_gazebo_mission_golden.py  curate_route_golden.py  deploy_runtime.sh  diagnose_mission_designer_obstacle_form3_partial_run.py  diagnose_mission_designer_wind_form3_partial_run.py  e2e_llm_dialogue_router.py  e2e_llm_repair_planner_boundary.py  migrate_legacy_runtime_claims_to_in_artifact.py  mission_designer_form3_envelope_source.py  missionos_knowledge_curator_worker.py  missionos_policy_runtime_worker.py  probe_gateway_route_invocation_boundary.py  probe_gateway_supervisor_process_boundary.py  quickstart.sh  (+125 more)
simulators/gazebo/plugins/motor_load_battery_coupler/: CMakeLists.txt  MotorLoadBatteryCoupler.cc  MotorLoadBatteryCoupler.hh  README.md
src/: main.py  quickstart_smoke.py
src/agents/: missionos_agents.py  model_config.py  root_agent.py  sub_agents.py
src/bridges/: __init__.py  common_errors.py  common_schema.py  desktop_bridge_client.py  desktop_bridge_schema.py  desktop_exec.py  host_bridge_client.py  host_bridge_exec.py  host_bridge_schema.py
src/browser/: current_tab_bridge.py
src/channels/: base.py  discord_ch.py  registry.py  telegram.py
src/cli/: missionos.py  repl.py
src/computer_use/: __init__.py  trajectory_store.py
src/config/: __init__.py  schema.py  settings.py
src/control_loop/: __init__.py  callbacks.py  constants.py  executor.py  executor_agent.py  guarded_tools.py  instructions.py  live_failure_taxonomy.py  orchestration.py  planner.py  (+7 more)
(+305 files in other folders)
